Arrow overlap fix

--- a/src/style/impact_hub/ImpactOverview-filtersAndAccount.less
+++ b/src/style/impact_hub/ImpactOverview-filtersAndAccount.less
@@ -38,6 +38,8 @@
 			padding: 0;
 			// keep icon to a good relative size
 			width: 2rem;
+			height: 2rem;
+			align-self: center;
 			@media @width-mobile {
 				width: 1.5rem !important;
 			}
